[package]
name = "tock-rs"
version = "0.1.0"
edition = "2021"
description =  "CLI Metronome"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rustyline = "12.0.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
