[package]
name = "tock-rs"
version = "0.1.0"
edition = "2021"
description =  "CLI Metronome"
licence = "MIT"

[dependencies]
nom = "7.1.3"
rustyline = { version = "12.0.0", features = ["with-sqlite-history"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.8"
